fix: внесены изменения по комментариям ревьювера ТЗ14